--- a/views/index.html
+++ b/views/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <title>Personal API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/public/styles/main.css" />
-    <script src="/public/scripts/app.js" defer></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+    <script src="scripts/app.js" defer></script>
 </head>
 <body>
     <h1>UNDER CONSTRUCTION</h1>
